@@ -6,7 +6,7 @@
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
-			<label index="tt_content.list_type_pi1">SDU Connect Loket</label>
+			<label index="tt_content.list_type_pi1">SDU Connect</label>
 
 			<label index="sduconnect.pi_flexform.sheet1">Select Script</label>
 			<label index="sduconnect.pi_flexform.sheet1_Desc">Here you can select the proxy script you want to use from SDU Connect as a content element</label>
